<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/icon"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:text="@string/app_header"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </FrameLayout>

        <com.google.android.material.search.SearchBar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:paddingStart="-12dp"
            app:buttonGravity="center_vertical"
            app:navigationIcon="@drawable/settings_top_menu"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/SearchView"
        android:fitsSystemWindows="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_offset"
            android:orientation="vertical">

            <TextView
                android:id="@+id/suitable_categories_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suitable_categories"
                android:textColor="@color/default_subTextColor"
                android:textSize="11sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_categories_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/suitable_products_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_offset"
                android:text="@string/suitable_products"
                android:textColor="@color/default_subTextColor"
                android:textSize="11sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </com.google.android.material.search.SearchView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:navGraph="@navigation/navigation" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/HomeBottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="false"
        app:background="@color/black"
        app:backgroundTint="@color/black"
        app:itemBackground="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>